[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Chao.png" type="Texture" id=1]
[ext_resource path="res://UI/Font2.tres" type="DynamicFont" id=2]
[ext_resource path="res://Maps/Map1/Arena1.gd" type="Script" id=3]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=5]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 1.73
glow_strength = 0.9
glow_bloom = 0.2
glow_blend_mode = 1
glow_bicubic_upscale = true
glow_high_quality = true
adjustment_enabled = true

[node name="Arena" type="Node2D"]
script = ExtResource( 3 )

[node name="Paredes" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 1344, -1882, 0, -1883, 0, -773, 542, -774, 543, -275, -36, -274, -35, 834, 1363, 834, 1363, -274, 802, -275, 802, -774, 1344, -773, 1344, -1882, 1344, -1882, 1627, -1784, 1707, 1030, -289, 1030, -279, -2046, 1371, -2099 )

[node name="Chao" type="Sprite" parent="."]
position = Vector2( 664, 280 )
scale = Vector2( 1.55444, 1.23222 )
texture = ExtResource( 1 )

[node name="Chao2" type="Sprite" parent="."]
position = Vector2( 2459, 278 )
scale = Vector2( 1.55444, 1.23222 )
texture = ExtResource( 1 )

[node name="Chao3" type="Sprite" parent="."]
position = Vector2( -1001, 288 )
scale = Vector2( 1.55444, 1.23222 )
texture = ExtResource( 1 )

[node name="Chao4" type="Sprite" parent="."]
position = Vector2( 672, -600 )
scale = Vector2( 0.288333, 1.23222 )
texture = ExtResource( 1 )

[node name="Chao5" type="Sprite" parent="."]
position = Vector2( 672, -1328 )
scale = Vector2( 1.49333, 1.23222 )
texture = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="ReadyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ArenaTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Spawns" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.356863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = -160.0
margin_right = 35.5
margin_bottom = -102.0
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Label2" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -35.5
margin_right = 35.5
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inimigos" type="Node2D" parent="."]

[node name="Enemy" parent="Inimigos" instance=ExtResource( 5 )]
position = Vector2( 170, 550 )

[node name="Enemy2" parent="Inimigos" instance=ExtResource( 5 )]
position = Vector2( 157, 321 )

[node name="Enemy3" parent="Inimigos" instance=ExtResource( 5 )]
position = Vector2( 275, 113 )

[node name="Enemy4" parent="Inimigos" instance=ExtResource( 5 )]
position = Vector2( 1264, 98 )

[node name="Enemy5" parent="Inimigos" instance=ExtResource( 5 )]
position = Vector2( 1294, 511 )

[node name="Enemy6" parent="Inimigos" instance=ExtResource( 5 )]
position = Vector2( 1232, -909 )

[node name="Enemy7" parent="Inimigos" instance=ExtResource( 5 )]
position = Vector2( 1207, -1613 )

[node name="Enemy8" parent="Inimigos" instance=ExtResource( 5 )]
position = Vector2( 347, -1737 )

[node name="Enemy9" parent="Inimigos" instance=ExtResource( 5 )]
position = Vector2( 115, -959 )

[connection signal="timeout" from="ReadyTimer" to="." method="_on_ReadyTimer_timeout"]
[connection signal="timeout" from="ArenaTimer" to="." method="_on_ArenaTimer_timeout"]
